--- a/client.html
+++ b/client.html
@@ -6,6 +6,7 @@
     constructor(id) {
       this.el = document.getElementById(id)
       this.ctx = this.el.getContext('2d')
+      this.frame = 0
       Object.assign(this.el.style, {
         backgroundColor: '#000000',
         position: 'absolute',
@@ -20,6 +21,7 @@
       this.el.height = window.innerHeight
     }
     draw(ms, time, ship, cam) {
+      this.frame++
       const opacity = Math.min(1, ms / 60)
       this.ctx.save()
       this.ctx.fillStyle = `rgba(0, 0, 0, ${opacity})`
@@ -39,7 +41,7 @@
       ctx.translate(ship.x, ship.y)
       ctx.rotate(ship.angle)
       ctx.beginPath()
-      ctx.fillStyle = '#ffffff'
+      ctx.fillStyle = '#00bbbb'
       ctx.strokeStyle = '#00ffff'
       ctx.lineWidth = 3
       ctx.moveTo(ship.size, 0)
@@ -53,10 +55,17 @@
       ctx.closePath()
       ctx.fill()
       ctx.stroke()
+      if (ship.thrusting && this.frame % 4 === 0) {
+        ctx.beginPath()
+        ctx.fillStyle = '#ffffff'
+        ctx.arc(-ship.size, len * 0.5, len * 0.75, 0, Math.PI * 2)
+        ctx.arc(-ship.size, -len * 0.5, len * 0.75, 0, Math.PI * 2)
+        ctx.fill()
+      }
       if (ship.bulletNext - time > ship.bulletInterval * 0.7) {
         ctx.beginPath()
         ctx.fillStyle = '#ffffff'
-        ctx.arc(ship.size * 1.75, 0, ship.size * 1.75, 0, Math.PI * 2)
+        ctx.arc(ship.size * 1.75, 0, ship.size * 1.5, 0, Math.PI * 2)
         ctx.fill()
       }
       ctx.restore()
@@ -108,6 +117,7 @@
       this.x1 = x
       this.y1 = y
       this.angle = -Math.PI * 0.5
+      this.thrusting = false
       this.size = 12
       this.drag = 0.002
       this.speed = 0.1
@@ -140,7 +150,8 @@
       if (right) this.angle += ms * this.agility
     }
     thrust(ms, forward) {
-      if (!forward) return
+      this.thrusting = forward
+      if (!this.thrusting) return
       const ax = this.speed * Math.cos(this.angle)
       const ay = this.speed * Math.sin(this.angle)
       this.x += ax
