--- a/client.html
+++ b/client.html
@@ -21,20 +21,30 @@
       window.addEventListener('resize', throttle(() => this.size(), 250))
     }
     size() {
-      this.el.width = window.innerWidth
-      this.el.height = window.innerHeight
+      this.width = this.el.width = window.innerWidth
+      this.height = this.el.height = window.innerHeight
     }
-    draw(ms, time, ship, cam, bullets) {
+    draw(ms, time, ship, cam, bullets, stars) {
       this.frame++
       const opacity = Math.min(1, ms / 60)
       this.ctx.save()
       this.ctx.fillStyle = `rgba(0, 0, 0, ${opacity})`
       this.ctx.fillRect(0, 0, this.el.width, this.el.height)
+      this.drawStars(this.ctx, stars)
       this.ctx.translate(this.el.width * 0.5, this.el.height * 0.5)
       this.drawCam(this.ctx, ship, cam)
       this.drawShip(this.ctx, time, ship)
       this.drawBullets(this.ctx, bullets)
       this.ctx.restore()
+    }
+    drawStars(ctx, stars) {
+      ctx.save()
+      stars.forEach(s => {
+        ctx.fillStyle = s.c
+        const size = 1 + 3 * (1 - s.z / 100)
+        ctx.fillRect(s.x, s.y, size, size)
+      })
+      ctx.restore()
     }
     drawCam(ctx, ship, cam) {
 
@@ -69,7 +79,7 @@
       if (ship.events.includes('shoot')) {
         ctx.beginPath()
         ctx.fillStyle = '#ffffff'
-        ctx.arc(ship.size * 1.75, 0, ship.size * 1.5, 0, Math.PI * 2)
+        ctx.arc(ship.size * 1.9, 0, ship.size * 1.5, 0, Math.PI * 2)
         ctx.fill()
       }
       ctx.restore()
@@ -160,7 +170,7 @@
       this.size = 12
       this.drag = 0.002
       this.speed = 0.1
-      this.agility = 0.005
+      this.agility = 0.003
       this.bulletInterval = 100
       this.bulletNext = 0
       this.spread = 0.25
@@ -250,6 +260,38 @@
     }
   }
 
+  class Stars {
+    constructor(width, height, n) {
+      this.vel = 5
+      this.points = []
+      for (let i = 0; i < n; i++) {
+        const r = Math.random()
+        const g = r + Math.random() * 0.5
+        const b = g + Math.random() * 0.25
+        const ratio = 255 * 1 / Math.sqrt(r * r + g * g + b * b)
+        const color = `rgba(${r * ratio}, ${g * ratio}, ${b * ratio}, 1)`
+        this.points.push({
+          x: Math.random() * width,
+          y: Math.random() * height,
+          z: 1 + Math.random() * 99,
+          c: color
+        })
+      }
+    }
+    update(ms, width, height) {
+      this.points.forEach(p => {
+        p.x -= this.vel / p.z
+        if (p.x < 0) {
+          p.x += width
+          p.y = Math.random() * height
+        }
+      })
+    }
+    frame() {
+      return this.points
+    }
+  }
+
   class Keyboard {
     constructor() {
       this.keys = {
@@ -280,6 +322,7 @@
     const cam = new Camera(ship)
     const bullets = new Set()
     const screen = new Screen('screen')
+    const stars = new Stars(screen.width, screen.height, 250)
     const kb = new Keyboard()
     const audio = new Audio()
     const stop = Tick(16, update, render)
@@ -294,11 +337,12 @@
         if (!b.update(ms, time)) bullets.delete(b)
       })
       cam.update(ms)
+      stars.update(ms, screen.width, screen.height)
     }
 
     function render(ms, time) {
       const sh = ship.frame()
-      screen.draw(ms, time, sh, cam, bullets)
+      screen.draw(ms, time, sh, cam, bullets, stars.frame())
       audio.play(ms, time, sh)
     }
   }
