--- a/client.html
+++ b/client.html
@@ -1,337 +1,23 @@
 <html>
 <canvas id='screen' width='640' height='480' />
+<script src='ship.js'></script>
+<script src='camera.js'></script>
+<script src='bullet.js'></script>
+<script src='screen.js'></script>
+<script src='stars.js'></script>
+<script src='keyboard.js'></script>
+<script src='audio.js'></script>
+<script src='tick.js'></script>
 <script>
-
-  // https://css-tricks.com/introduction-web-audio-api/
-  // https://noisehack.com/generate-noise-web-audio-api/#demo
-  // https://codepen.io/gregh/post/recreating-legendary-8-bit-games-music-with-web-audio-api
-
-  class Screen {
-    constructor(id) {
-      this.el = document.getElementById(id)
-      this.ctx = this.el.getContext('2d')
-      this.frame = 0
-      Object.assign(this.el.style, {
-        backgroundColor: '#000000',
-        position: 'absolute',
-        left: '0',
-        top: '0',
-      })
-      this.size()
-      window.addEventListener('resize', throttle(() => this.size(), 250))
-    }
-    size() {
-      this.width = this.el.width = window.innerWidth
-      this.height = this.el.height = window.innerHeight
-    }
-    draw(ms, time, ship, cam, bullets, stars) {
-      this.frame++
-      const opacity = Math.min(1, ms / 60)
-      this.ctx.save()
-      this.ctx.fillStyle = `rgba(0, 0, 0, ${opacity})`
-      this.ctx.fillRect(0, 0, this.el.width, this.el.height)
-      this.drawStars(this.ctx, stars, cam)
-      this.ctx.translate(this.el.width * 0.5, this.el.height * 0.5)
-      this.drawCam(this.ctx, cam)
-      this.drawShip(this.ctx, time, ship)
-      this.drawBullets(this.ctx, bullets)
-      this.ctx.restore()
-    }
-    drawStars(ctx, stars, cam) {
-      ctx.save()
-      stars.forEach(s => {
-        ctx.fillStyle = s.c
-        const ratio = (1 - s.z / 100)
-        const size = 1 + 3 * ratio
-        let x = s.x - cam.x * ratio
-        let y = s.y - cam.y * ratio
-        while (x < 0) x += this.width
-        while (x > this.width) x -= this.width
-        while (y < 0) y += this.height
-        while (y > this.height) y -= this.height
-        ctx.fillRect(x, y, size, size)
-      })
-      ctx.restore()
-    }
-    drawCam(ctx, cam) {
-      ctx.translate(-cam.x, -cam.y)
-    }
-    drawShip(ctx, time, ship) {
-      const len = Math.sqrt(ship.size * ship.size * 0.5)
-      ctx.save()
-      ctx.translate(ship.x, ship.y)
-      ctx.rotate(ship.angle)
-      ctx.beginPath()
-      ctx.fillStyle = '#00bbbb'
-      ctx.strokeStyle = '#00ffff'
-      ctx.lineWidth = 3
-      ctx.moveTo(ship.size, 0)
-      ctx.lineTo(-len, ship.size)
-      ctx.lineTo(-len * 1.2, ship.size)
-      ctx.lineTo(-len * 0.5, len * 0.5)
-      ctx.lineTo(-len, 0)
-      ctx.lineTo(-len * 0.5, -len * 0.5)
-      ctx.lineTo(-len * 1.2, -ship.size)
-      ctx.lineTo(-len, -ship.size)
-      ctx.closePath()
-      ctx.fill()
-      ctx.stroke()
-      if (ship.thrusting && this.frame % 4 === 0) {
-        ctx.beginPath()
-        ctx.fillStyle = '#ffffff'
-        ctx.arc(-ship.size, len * 0.5, len * 0.75, 0, Math.PI * 2)
-        ctx.arc(-ship.size, -len * 0.5, len * 0.75, 0, Math.PI * 2)
-        ctx.fill()
-      }
-      if (ship.events.includes('shoot')) {
-        ctx.beginPath()
-        ctx.fillStyle = '#ffffff'
-        ctx.arc(ship.size * 1.9, 0, ship.size * 1.5, 0, Math.PI * 2)
-        ctx.fill()
-      }
-      ctx.restore()
-    }
-    drawBullets(ctx, bullets) {
-      ctx.save()
-      ctx.beginPath()
-      ctx.fillStyle = '#ffffff'
-      ctx.strokeStyle = '#ffff00'
-      ctx.lineWidth = 5
-      bullets.forEach(b => {
-        ctx.moveTo(b.x, b.y)
-        ctx.arc(b.x, b.y, b.size, b.angle - Math.PI * 0.7, b.angle + Math.PI * 0.7)
-        ctx.lineTo(b.x, b.y)
-      })
-      ctx.fill()
-      ctx.stroke()
-      ctx.restore()
-    }
-  }
-
-  class Audio {
-    constructor() {
-      this.context = new (window.AudioContext || window.webkitAudioContext)()
-      this.engines = this.context.createOscillator()
-      this.engines.type = 'sine'
-      this.engines.frequency.value = 131
-      this.engines.start()
-      const resume = () => {
-        document.removeEventListener('keydown', resume)
-        document.removeEventListener('click', resume)
-        this.context.resume()
-      }
-      document.addEventListener('keydown', resume)
-      document.addEventListener('click', resume)
-    }
-    play(ms, time, ship) {
-      if (ship.events.includes('shoot')) this.shoot()
-      if (ship.thrusting) this.engines.connect(this.context.destination)
-      else this.engines.disconnect()
-    }
-    shoot() {
-      const now = this.context.currentTime
-      const sound = this.context.createOscillator()
-      sound.type = 'triangle'
-      sound.frequency.value = 110
-      sound.connect(this.context.destination)
-      sound.start(now)
-      sound.stop(now + 0.1)
-    }
-    thrust() {
-
-    }
-  }
-
-  function Tick(tick, update, render) {
-    let stopped = false
-    let time = performance.now()
-    requestAnimationFrame(frame)
-    return stop
-
-    function frame() {
-      if (stopped) return
-      let now = performance.now()
-      if (time < now - 200) time = now - 200
-      let prev = time
-      for (let t = time; t <= now; t += tick) {
-        time = t
-        update(tick, time)
-      }
-      render(now - prev, now)
-      requestAnimationFrame(frame)
-    }
-
-    function stop() {
-      stopped = true
-    }
-  }
-
-  class Ship {
-    constructor(x, y) {
-      this.x = x
-      this.y = y
-      this.x1 = x
-      this.y1 = y
-      this.angle = -Math.PI * 0.5
-      this.thrusting = false
-      this.size = 12
-      this.drag = 0.002
-      this.speed = 0.05
-      this.agility = 0.003
-      this.bulletInterval = 100
-      this.bulletNext = 0
-      this.spread = 0.25
-      this.kick = 0.5
-      this.events = new Set()
-    }
-    update(ms, time, actions, bullets) {
-      this.integrate(ms)
-      this.turn(ms, actions.left, actions.right)
-      this.thrust(ms, actions.forward)
-      this.shoot(ms, time, actions.shoot, bullets)
-    }
-    integrate(ms) {
-      const vx = (this.x - this.x1)
-      const vy = (this.y - this.y1)
-      const speed = Math.sqrt(vx * vx + vy * vy)
-      const drag = Math.min(1, speed * speed * this.drag)
-      this.x1 = this.x
-      this.y1 = this.y
-      this.x += vx * (1 - drag)
-      this.y += vy * (1 - drag)
-    }
-    turn(ms, left, right) {
-      if (left) this.angle -= ms * this.agility
-      if (right) this.angle += ms * this.agility
-    }
-    thrust(ms, forward) {
-      this.thrusting = forward
-      if (!this.thrusting) return
-      const ax = this.speed * Math.cos(this.angle)
-      const ay = this.speed * Math.sin(this.angle)
-      this.x += ax
-      this.y += ay
-    }
-    shoot(ms, time, shooting, bullets) {
-      if (!shooting) return
-      if (this.bulletNext > time) return
-      const bx = this.x + this.size * Math.cos(this.angle) * 2
-      const by = this.y + this.size * Math.sin(this.angle) * 2
-      const ba = this.angle + (Math.random() - 0.5) * this.spread
-      bullets.add(new Bullet(bx, by, ba, time))
-      this.bulletNext = time + this.bulletInterval
-      this.x += this.kick * -Math.cos(this.angle)
-      this.y += this.kick * -Math.sin(this.angle)
-      this.events.add('shoot')
-    }
-    frame() {
-      const f = {
-        events: Array.from(this.events),
-        x: this.x,
-        y: this.y,
-        size: this.size,
-        angle: this.angle,
-        thrusting: this.thrusting,
-      }
-      this.events.clear()
-      return f
-    }
-  }
-
-  class Bullet {
-    constructor(x, y, angle, time) {
-      this.x = x
-      this.y = y
-      this.angle = angle
-      this.death = time + 2000
-      this.vel = 6
-      this.size = 12
-    }
-    update(ms, time) {
-      const vx = this.vel * Math.cos(this.angle)
-      const vy = this.vel * Math.sin(this.angle)
-      this.x += vx
-      this.y += vy
-      return time < this.death
-    }
-  }
-
-  class Camera {
-    constructor(ship) {
-      this.lead = ship.size * 15
-      this.ship = ship
-      this.delay = 1000
-      this.x = this.ship.x
-      this.y = this.ship.y
-    }
-    update(ms) {
-      const tx = this.ship.x + this.lead * Math.cos(this.ship.angle)
-      const ty = this.ship.y + this.lead * Math.sin(this.ship.angle)
-      const dx = tx - this.x
-      const dy = ty - this.y
-      const t = Math.min(1, ms / this.delay)
-      this.x += dx * t
-      this.y += dy * t
-    }
-  }
-
-  class Stars {
-    constructor(width, height, n) {
-      this.vel = 5
-      this.points = []
-      for (let i = 0; i < n; i++) {
-        const r = Math.random()
-        const g = r + Math.random() * 0.5
-        const b = g + Math.random() * 0.25
-        const ratio = 255 * 1 / Math.sqrt(r * r + g * g + b * b)
-        const color = `rgba(${r * ratio}, ${g * ratio}, ${b * ratio}, 1)`
-        this.points.push({
-          x: Math.random() * width,
-          y: Math.random() * height,
-          z: Math.max(1, Math.random() * 125 - 25),
-          c: color
-        })
-      }
-    }
-    update(ms, width, height) {
-
-    }
-    frame() {
-      return this.points
-    }
-  }
-
-  class Keyboard {
-    constructor() {
-      this.keys = {
-        'ArrowLeft': 'left',
-        'ArrowRight': 'right',
-        'ArrowUp': 'forward',
-        ' ': 'shoot'
-      }
-      this.state = { left: false, right: false, forward: false, shoot: false }
-      document.addEventListener('keydown', e => { this.setKey(e, true) })
-      document.addEventListener('keyup', e => { this.setKey(e, false) })
-    }
-    setKey(e, state) {
-      const action = this.keys[e.key]
-      if (!action) return
-      this.state[action] = state
-      e.preventDefault()
-    }
-    actions() {
-      return this.state
-    }
-  }
 
   main()
 
   function main() {
     const ship = new Ship(0, 0)
-    const cam = new Camera(ship)
+    const cam = new Camera(ship.x, ship.y)
     const bullets = new Set()
     const screen = new Screen('screen')
-    const stars = new Stars(screen.width, screen.height, 100) // TODO: n as density over rect area
+    const stars = new Stars(0.0001)
     const kb = new Keyboard()
     const audio = new Audio()
     const stop = Tick(16, update, render)
@@ -345,8 +31,7 @@
       bullets.forEach(b => {
         if (!b.update(ms, time)) bullets.delete(b)
       })
-      stars.update(ms, screen.width, screen.height)
-      cam.update(ms)
+      cam.update(ms, ship)
     }
 
     function render(ms, time) {
@@ -356,14 +41,6 @@
     }
   }
 
-  function throttle(fn, interval) {
-    let dirty = false
-    return function () {
-      if (dirty) return
-      dirty = true
-      setTimeout(() => { fn(); dirty = false }, interval)
-    }
-  }
 </script>
 
 </html>
