--- a/client.html
+++ b/client.html
@@ -5,6 +5,7 @@
 <script src='asteroids.js'></script>
 <script src='bullets.js'></script>
 <script src='smokes.js'></script>
+<script src='collisions.js'></script>
 <script src='body.js'></script>
 <script src='tick.js'></script>
 
